--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,3 +1,45 @@
-body {
-    
+@import './modules/variables';
+
+img {
+    max-width: 100%;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+}
+
+.main-text {
+    grid-area: title;
+}
+
+.main-image {
+    grid-area: image;
+}
+
+
+.grid-main-area {
+    display: grid;
+    grid-template-columns: repeat(9, 1fr);
+    grid-template-areas: 
+    "title title title title title title title title title"
+    "image image image image image image image image image";
+}
+
+.container {
+    grid-column: span 12;
+    padding: $big-padding;
+}
+
+@media (min-width: 960px) {
+    .grid-main-area {
+        display: grid;
+        grid-template-columns: repeat(9, 1fr);
+        grid-template-areas: 
+        "title title title image image image image image image";
+    }
+
+    .container {
+        grid-column: 2 / 12;
+    }
 }
