--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,8 +1,61 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+
 @import './modules/variables';
 @import './modules/mixins';
 
+html, body {
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+}
+
 img {
     max-width: 100%;
+}
+
+figure {
+    position: relative;
+    max-height: 100%;
+    margin: 0;
+    figcaption {
+        padding: $small-padding;
+        font-weight: bold;
+        text-transform: uppercase;
+        font-size: 1.2em;
+        letter-spacing: 5px;
+        position: absolute;
+        width: auto;
+        bottom: 0;
+        left: 10px;
+        z-index: 10;
+        @include text-center;
+        color: rgba($silver, 0.5);
+    }
+}
+
+.btn {
+    padding: $small-padding;
+    position: relative;
+    color: $coffee !important;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    box-sizing: border-box;
+
+    &:before {
+        content: '';
+        position: absolute;
+        background: $blue;
+        width: 100%;
+        left: 0;
+        bottom: 0;
+        height: 20%;
+        z-index: -1;
+        transition: all 0.2s ease-out;
+    }
+
+    &:hover::before {
+        height: 100%;
+    }
 }
 
 .grid {
@@ -10,21 +63,30 @@ img {
     grid-template-columns: repeat(12, 1fr);
 }
 
-.main-text {
-    grid-area: title;
-}
-
-.main-image {
-    grid-area: image;
-}
-
-
 .grid-main-area {
     display: grid;
+    margin-top: $big-margin-top;
     grid-template-columns: repeat(9, 1fr);
     grid-template-areas: 
     "title title title title title title title title title"
     "image image image image image image image image image";
+    
+    .text {
+        font-weight: 300;
+        grid-area: title;
+        font-size: 1.2em;
+        line-height: 1.5em;
+        h1 {
+            font-weight: initial;
+            font-size: $big;
+            letter-spacing: .3em;
+            line-height: 1.5em;
+        }
+    }
+    
+    .image {
+        grid-area: image;
+    }
 }
 
 .container {
