--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -17,18 +17,7 @@ figure {
     max-height: 100%;
     margin: 0;
     figcaption {
-        padding: $small-padding;
-        font-weight: bold;
-        text-transform: uppercase;
-        font-size: 1.2em;
-        letter-spacing: 5px;
-        position: absolute;
-        width: auto;
-        bottom: 0;
-        left: 10px;
-        z-index: 10;
-        @include text-center;
-        color: rgba($silver, 0.5);
+        @include caption;
     }
 }
 
@@ -104,6 +93,24 @@ figure {
     &.parallax {
         background-image: url(../../public/images/image3.jpg);
         background-attachment: fixed;
+        position: relative;
+
+        p {
+            @include caption;
+            background-color: rgba($blue, .8);
+            display: block;
+            width: 100%;
+            box-sizing: border-box;
+            left: 0;
+            @include text-right;
+
+            span {
+                display: block;
+                font-size: 0.5em;
+                font-weight: 300;
+                margin-top: 6px;
+            }
+        }
     }
 }
 
