--- a/assets/css/modules/_mixins.scss
+++ b/assets/css/modules/_mixins.scss
@@ -7,6 +7,10 @@
     text-align: center;
 }
 
+@mixin text-right {
+    text-align: right;
+}
+
 @mixin center-vertical-horizontal {
     display: flex;
     justify-content: center;
@@ -15,4 +19,19 @@
 
 @mixin absolute-cover {
     @include full;
+}
+
+@mixin caption {
+    padding: $small-padding;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 1.2em;
+    letter-spacing: 5px;
+    position: absolute;
+    width: auto;
+    bottom: 0;
+    left: 10px;
+    z-index: 10;
+    @include text-center;
+    color: rgba($silver, 0.5);
 }
