--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -21,6 +21,10 @@ figure {
     }
 }
 
+.full-height {
+    min-height: 100vh;
+}
+
 .btn {
     padding: $small-padding;
     position: relative;
@@ -62,15 +66,11 @@ figure {
     "image image image image image image image image image";
     
     .text {
-        font-weight: 300;
+        @include main-text;
         grid-area: title;
-        font-size: 1.2em;
-        line-height: 1.5em;
+
         h1 {
-            font-weight: initial;
-            font-size: $big;
-            letter-spacing: .3em;
-            line-height: 1.5em;
+            @include main-text-title;
         }
     }
     
@@ -109,6 +109,44 @@ figure {
                 font-size: 0.5em;
                 font-weight: 300;
                 margin-top: 6px;
+            }
+        }
+    }
+}
+
+.mission {
+    align-items: center;
+
+    .container {
+        @include main-text;
+        font-size: 1.1em;
+
+        h2 {
+            @include main-text-title;
+        }
+
+        figure {
+            float: right;
+            margin-left: 20px;
+        }
+
+        p {
+            line-height: 2em;
+
+            &:nth-of-type(1) {
+                margin-bottom: 3em;
+                position: relative;
+                
+                &::after {
+                    content: '';
+                    background-color: $blue;
+                    position: absolute;
+                    bottom: -1.5em;
+                    height: 5px;
+                    right: 50px;
+                    width: 80%;
+                    z-index: -1;
+                }
             }
         }
     }
