--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -152,6 +152,23 @@ figure {
     }
 }
 
+.social {
+    margin-top: $big-margin-top;
+    margin-bottom: $big-margin-top;
+    @include text-center;
+
+    p.title {
+        font-weight: 300;
+        font-size: 2.5em;
+    }
+
+    a {
+        display: block;
+        max-width: 150px;
+        margin: 1em auto;
+    }
+}
+
 @media (min-width: 960px) {
     .grid-main-area {
         display: grid;
@@ -162,5 +179,17 @@ figure {
 
     .container {
         grid-column: 2 / 12;
+    }
+
+    .social {
+        a {
+            display: inline-block;
+            margin-top: 0;
+            margin-right: 90px;
+
+            &:last-of-type {
+                margin-right: 0;
+            }
+        }
     }
 }
