--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -116,6 +116,28 @@ figure {
 
 .slider {
 
+    .controls {
+        text-align: right;
+        margin-bottom: 10px;
+        padding-right: 2em;
+
+        .right-arrow, .left-arrow {
+            height: 70px;
+            @include transition;
+            transition-duration: 0.15s;
+            cursor: pointer;
+            
+            &:hover {
+                opacity: 0.3;
+            }
+        }
+
+        .left-arrow {
+            margin-right: 1em;
+            transform: rotate(180deg);
+        }
+    }
+
     .image {
         display: flex;
         align-items: center;
