--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -120,6 +120,7 @@ figure {
         text-align: right;
         margin-bottom: 10px;
         padding-right: 2em;
+        display: none;
 
         .right-arrow, .left-arrow {
             height: 70px;
