--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -233,6 +233,12 @@ figure {
     }
 }
 
+#map {
+    width: 100%;
+    min-height: 600px;
+    margin-top: $big-margin-top;
+}
+
 .social {
     margin-top: $big-margin-top;
     margin-bottom: $big-margin-top;
