--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -51,6 +51,103 @@ figure {
     }
 }
 
+.menu {
+    position: fixed;
+    top: 2em;
+    right: 2em;
+    border-radius: 50%;
+    border: 1px solid #000;
+    height: 60px;
+    width: 60px;
+    @include center-vertical-horizontal;
+    background: #fff;
+    @include transition;
+    transition-duration: .15s;
+
+    &:hover {
+        background-color: $gray;
+        cursor: pointer;
+    }
+
+    img {
+        height: 40px;
+    }
+}
+
+.menu-screen {
+    background-color: #fff;
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    z-index: 100;
+    top: -101vh;
+    @include center-vertical-horizontal;
+    @include transition;
+
+    .close {
+        position: absolute;
+        top: 2em;
+        right: 2em;
+        img {
+            height: 40px;
+        }
+    }
+
+    &.active {
+        top: 0;
+    }
+
+    a {
+        display: block;
+        text-decoration: none;
+        @include text-center;
+        position: relative;
+        margin-top: 1em;
+
+        &:first-of-type {
+            margin-top: 0;
+        }
+
+        .main {
+            display: block;
+            font-size: 2em;
+            color: $light-blue;
+        }
+
+        span:not(.main) {
+            color: $gray;
+            opacity: 0;
+            @include transition;
+            transition-duration: .2s;
+        }
+
+        &::after {
+            content: '';
+            position: absolute;
+            top: 1.1em;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            background-color: $blue;
+            @include transition;
+            transition-duration: .2s;
+            transform: scale(0);
+        }
+
+        &:hover span.main {
+            color: #000;
+        }
+
+        &:hover::after {
+            transform: scale(1);
+        }
+
+        &:hover span:not(.main) {
+            opacity: 1;
+        }
+    }
+}
+
 .grid {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
