Agregando scrollTo al menu

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -79,7 +79,7 @@ figure {
     height: 100vh;
     width: 100vw;
     position: fixed;
-    z-index: 100;
+    z-index: 999;
     top: -101vh;
     @include center-vertical-horizontal;
     @include transition;
@@ -334,6 +334,8 @@ figure {
     width: 100%;
     min-height: 600px;
     margin-top: $big-margin-top;
+    z-index: -1;
+    position: relative;
 }
 
 .social {
